--- a/backend/config/dev.env
+++ b/backend/config/dev.env
@@ -2,7 +2,7 @@ PORT=3000
 SENDGRID_API_KEY=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
 MONGODB_URL=mongodb://127.0.0.1:27017/ecommerce
 NODE_ENV=development
-
+PASS_SEC="SOMETHING"
 BCRYPT_WORK_FACTOR=12
 
 JWT_EXPIRES_IN=90d
