--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,14 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "dependencies": {
@@ -34,15 +41,18 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.5",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.15"
   }
