--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -49,7 +50,8 @@
     "mongoose": "^6.1.4",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "stripe": "^8.195.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.16.5",
